--- a/SiteIA/style.css
+++ b/SiteIA/style.css
@@ -1,3 +1,80 @@
+/*
+#e7e113 (amarelo)
+#000000 (preto)
+#242a2f (cinza claro)
+#2a2b39 (o cinza mais claro da paleta)
+*/
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
+}
+
+
+body{
+    background-color: black;
+    color: floralwhite;
+}
+
+header{
+    background-color: #242a2f;
+    padding: 20px 20px 20px 20px;
+    width: 100%;
+    top: 0%;
+    position: fixed;
+    z-index: 1000;
+}
+
 h1{
     text-align: center;
+}
+
+ul{
+    margin-left: 20px;
+}
+
+nav ul{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+nav ul li{
+    margin-left: 20px;
+}
+
+nav ul li a{
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+header .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.logo{
+    font-size: 2em;
+    font-weight: bold;
+}
+
+a:hover{
+    color: #e7e113;
+}
+
+@media (max-width:780px){
+    header .container{
+        flex-direction: column;
+        text-align: center;
+    }
+
+    nav ul{
+        margin-top: 10px;
+        flex-direction: column;
+    }
 }
