Imagens dos álbuns e com as playlists certas

--- a/SiteIA/style.css
+++ b/SiteIA/style.css
@@ -78,3 +78,12 @@ a:hover{
         flex-direction: column;
     }
 }
+
+#albuns {
+    text-align: center; 
+}
+
+#albuns img {
+    width: 20.4%; 
+    height: auto; 
+}
