--- a/SiteIA/style.css
+++ b/SiteIA/style.css
@@ -10,6 +10,10 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
+    font-size: 108%;
+    text-align: justify;
+    margin-right: 3px;
+    margin-left: 2px;
 }
 
 
@@ -23,19 +27,20 @@ header{
     padding: 20px 20px 20px 20px;
     width: 100%;
     top: 0%;
-    position: fixed;
+    position: sticky;
     z-index: 1000;
 }
 
 h1{
     text-align: center;
-    font-size: 400%;
+    font-size: 380%;
     color: #e7e113;
 }
 
 h2{
     font-size: 200%;
     color: #bdb831;
+    text-align: left;
 }
 
 ul{
@@ -52,6 +57,7 @@ nav ul{
 
 nav ul li{
     margin-left: 20px;
+    font-size: large;
 }
 
 nav ul li a{
@@ -94,4 +100,8 @@ a:hover{
 #albuns img {
     width: 20.4%; 
     height: auto; 
+}
+
+p{
+    text-indent: 1.3em;
 }
