--- a/SiteIA/style.css
+++ b/SiteIA/style.css
@@ -89,6 +89,7 @@ a:hover{
 
 #curiosidades{
     padding-right: 1.3em;
+    padding-top: 1.3em;
 }
 
 #albuns img {
@@ -133,6 +134,10 @@ p{
     padding-right: 30px;
 }
 
+section{
+    scroll-margin-top: 100px;
+}
+
 @media (max-width:780px){
     header .container{
         flex-direction: column;
@@ -153,9 +158,8 @@ p{
         justify-content: center;
         gap: 30px;
     }
-}
-@media (max-width: 420){
-    h1{
-        font-size: 0.2em;
+
+    section{
+        scroll-margin-top: 145px;
     }
 }
