--- a/SiteIA/style.css
+++ b/SiteIA/style.css
@@ -138,6 +138,33 @@ section{
     scroll-margin-top: 100px;
 }
 
+#compositores {
+    display: grid; /* Transforma o layout em uma grade (grid) */
+    grid-template-columns: repeat(auto-fit, minmax(200px, 4fr)); /*a função repeat(auto-fit) permite que as imagens se ajustem automaticamente, e o minmax(200, 1fr) permite que o mínimo permitido seja de 200px, e o máximo seja de 1fr(espaço disponível na tela)*/
+    gap: 20px; /*Inclui um espaçamento entre as imagens*/
+    text-align: center;
+    padding: 50px 0; /*Espaçamento em cima e embaixo*/
+}
+
+#compositores .item{
+    background-color: #24282b;
+    border: 4px solid #888525; /*Coloca uma borda*/
+    border-radius: 10px; /*arredonda as bordas*/
+    padding: 20px; /*Cria um espaçamento entre a borda e o conteúdo*/
+    box-shadow: 0px 4px 10px rgb(255, 255, 255); /*Cria uma sombra */
+    transition: transform 0.2s ease, box-shadow 0.2s ease; /*faz uma transição ao passar o mouse por cima*/
+    cursor: pointer; /*Transforma o mouse em ponteiro*/
+}
+
+#compositores .item:hover{
+    transform: translateY(-5px); /*Levanta o card levemente*/
+    box-shadow: 0px 4px 6px rgb(189, 189, 189);
+}
+
+#compositores .item:active{
+    transform: scale(0.98);
+}
+
 @media (max-width:780px){
     header .container{
         flex-direction: column;
