--- a/SiteIA/style.css
+++ b/SiteIA/style.css
@@ -42,7 +42,6 @@ h2{
 }
 
 ul{
-    margin-left: 20px;
     margin-left: 2em;
 }
 
@@ -117,6 +116,7 @@ a:hover{
 
 p{
     text-indent: 1.3em;
+    font-size: 1em;
     margin-right: 3px;
     margin-left: 2px;
 }
@@ -140,25 +140,26 @@ section{
 
 #compositores {
     display: grid; /* Transforma o layout em uma grade (grid) */
-    grid-template-columns: repeat(auto-fit, minmax(200px, 4fr)); /*a função repeat(auto-fit) permite que as imagens se ajustem automaticamente, e o minmax(200, 1fr) permite que o mínimo permitido seja de 200px, e o máximo seja de 1fr(espaço disponível na tela)*/
+    grid-template-columns: repeat(auto-fit, minmax(200px, 750px)); /*a função repeat(auto-fit) permite que as imagens se ajustem automaticamente, e o minmax(200, 1fr) permite que o mínimo permitido seja de 200px, e o máximo seja de 1fr(espaço disponível na tela)*/
     gap: 20px; /*Inclui um espaçamento entre as imagens*/
     text-align: center;
-    padding: 50px 0; /*Espaçamento em cima e embaixo*/
+    margin: 0.06em;
 }
 
 #compositores .item{
     background-color: #32363a;
+    font-size: 1em;
     border: 4px solid #888525; /*Coloca uma borda*/
-    border-radius: 10px; /*arredonda as bordas*/
+    border-radius: 15px; /*arredonda as bordas*/
     padding: 20px; /*Cria um espaçamento entre a borda e o conteúdo*/
     box-shadow: 0px 4px 10px rgb(255, 255, 255); /*Cria uma sombra */
-    transition: transform 0.8s ease-out, box-shadow 0.2s ease; /*faz uma transição ao passar o mouse por cima*/
+    transition: transform 0.8s ease-out, box-shadow 0.8s ease-in; /*faz uma transição ao passar o mouse por cima*/
     cursor: pointer; /*Transforma o mouse em ponteiro*/
 }
 
 #compositores .item:hover{
     transform: translateY(-5px); /*Levanta o card levemente*/
-    box-shadow: 0px 4px 6px rgb(189, 189, 189, 0.2);
+    box-shadow: 2px 4px 6px rgb(189, 189, 189, 0.2);
 }
 
 #compositores .item:active{
@@ -169,6 +170,7 @@ section{
 #compositores .item h3{
     color: #888525;
     text-align: center;
+    font-size: 1.2em;
 }
 
 #compositores .item p{
@@ -179,9 +181,10 @@ section{
 
 #compositores .item img{
     width: 100%;
-    max-width: 150px;
+    max-width: 650px;
     height: auto;
     margin-bottom: 10px;
+    justify-content: center;
 }
 
 @media (max-width:780px){
@@ -206,6 +209,52 @@ section{
     }
 
     section{
-        scroll-margin-top: 145px;
+        scroll-margin-top: 155px;
+    }
+
+    h1 {
+        text-align: center;
+        font-size: 2.4em;
+    }
+
+    h2 {
+        font-size: 1em;
+        text-align: left;
+    }
+
+    p {
+        text-indent: 0.7em;
+        font-size: 0.7em;
+        margin-right: 2px;
+        margin-left: 1px;
+    }
+
+    .banner{
+        background: url(img/Banner.jpg) no-repeat center/cover;
+        height: 470px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        font-size: 1.2em;
+        text-shadow: 6.5px 4px 5px rgb(168, 174, 54);
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    #curiosidades ul{
+        font-size: 0.7em;
+    }
+
+    #compositores .item{
+        font-size: 0.7em;
+    }
+}
+
+
+@media (max-width: 350px){
+    h1{
+        text-align: center;
+        font-size: 1.43em;
     }
 }
