--- a/SiteIA/style.css
+++ b/SiteIA/style.css
@@ -138,13 +138,12 @@ section{
     scroll-margin-top: 100px;
 }
 
-#compositores {
+#compositores .container{
     display: grid; /* Transforma o layout em uma grade (grid) */
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /*a função repeat(auto-fit) permite que as imagens se ajustem automaticamente, e o minmax(200, 1fr) permite que o mínimo permitido seja de 200px, e o máximo seja de 1fr(espaço disponível na tela)*/
+    grid-template-columns: repeat(auto-fit, minmax(200px, 909px)); /*a função repeat(auto-fit) permite que as imagens se ajustem automaticamente, e o minmax(200, 1fr) permite que o mínimo permitido seja de 200px, e o máximo seja de 1fr(espaço disponível na tela)*/
     gap: 20px; /*Inclui um espaçamento entre as imagens*/
     margin-top: 1.3em;
     text-align: center;
-    margin: 0.06em;
 }
 
 #compositores .item{
@@ -183,10 +182,11 @@ section{
 
 #compositores .item img{
     width: 100%;
-    max-width: 650px;
+    max-width: 500px;
     height: auto;
     margin-bottom: 10px;
     align-items: center;
+    justify-content: center;
 }
 
 .card{
@@ -194,7 +194,57 @@ section{
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(59, 59, 59, 0.932);
-    max-width: 300px;
+    max-width: 500px;
+    margin: auto;
+    text-align: center;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #bdb831;
+    color: aliceblue;
+    text-decoration: none;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.btn:hover{
+    background-color: #888421;
+    color: aliceblue;
+    transform: scale(0.99);
+}
+
+.btn2 {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #bdb831;
+    color: aliceblue;
+    text-decoration: none;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.btn2:hover{
+    background-color: #888421;
+    color: aliceblue;
+    transform: scale(0.99);
+}
+
+.btn3 {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #bdb831;
+    color: aliceblue;
+    text-decoration: none;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.btn3:hover{
+    background-color: #888421;
+    color: aliceblue;
+    transform: scale(0.99);
 }
 
 .modal {
@@ -214,31 +264,39 @@ section{
 }
 
 .modal-content{
-    background-color: rgba(0, 0, 0, 0.795);
+    background-color: rgba(0, 0, 0, 0.925);
     padding: 30px;
     border-radius: 20px;
-    max-width: 400px;
+    max-width: 700px;
     text-align: center;
     box-shadow: 3px 4px 10px rgb(99, 99, 99);
     color: black;
+    font-size: 1em;
 }
 
 .modal-content h3{
     color: #888525;
+    font-size: 1.5em;
 }
 
 .modal-content p{
     color: rgb(221, 221, 220);
 }
 
-.close-bnt{
+.close-btn{
     margin-top: 20px;
     display: inline-block;
     padding: 8px 16px;
     background: rgb(223, 9, 9);
-    color: whitesmoke;
+    color: aliceblue;
     border-radius: 10px;
     text-decoration: none;
+}
+
+.close-btn:hover{
+    background: rgb(146, 16, 16);
+    color: aliceblue;
+    transform: scale(0.99);
 }
 
 @media (max-width:780px){
