--- a/SiteIA/style.css
+++ b/SiteIA/style.css
@@ -170,7 +170,7 @@ section{
 #compositores .item h3{
     color: #888525;
     text-align: center;
-    font-size: 1.2em;
+    font-size: 1.5em;
 }
 
 #compositores .item p{
@@ -181,15 +181,19 @@ section{
 }
 
 #compositores .item img{
+    display: block;
     width: 100%;
     max-width: 500px;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    border-radius: 15px;
     margin-bottom: 10px;
-    align-items: center;
-    justify-content: center;
+
 }
 
-.card{
+.card1{
     background: #34383b00;
     padding: 20px;
     border-radius: 10px;
@@ -205,7 +209,7 @@ section{
     background-color: #bdb831;
     color: aliceblue;
     text-decoration: none;
-    border-radius: 6px;
+    border-radius: 8px;
     cursor: pointer;
 }
 
@@ -221,7 +225,7 @@ section{
     background-color: #bdb831;
     color: aliceblue;
     text-decoration: none;
-    border-radius: 6px;
+    border-radius: 8px;
     cursor: pointer;
 }
 
@@ -237,7 +241,7 @@ section{
     background-color: #bdb831;
     color: aliceblue;
     text-decoration: none;
-    border-radius: 6px;
+    border-radius: 8px;
     cursor: pointer;
 }
 
@@ -277,6 +281,7 @@ section{
 .modal-content h3{
     color: #888525;
     font-size: 1.5em;
+    margin-bottom: 0.5em;
 }
 
 .modal-content p{
@@ -289,7 +294,7 @@ section{
     padding: 8px 16px;
     background: rgb(223, 9, 9);
     color: aliceblue;
-    border-radius: 10px;
+    border-radius: 8px;
     text-decoration: none;
 }
 
