--- a/SiteIA/style.css
+++ b/SiteIA/style.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     scroll-behavior: smooth;
     font-size: 108%;
     text-align: justify;
@@ -95,7 +95,7 @@ a:hover{
     margin-left: auto;
     margin-right: auto;
     width: 100%; 
-    max-width: 250px; 
+    max-width: 300px; 
     height: auto; 
     clip-path: polygon(50% 0%, 80% 10%, 100% 35%, 100% 70%, 80% 90%, 50% 100%, 20% 90%, 0% 70%, 0% 35%, 20% 10%);
     display: block;
@@ -112,6 +112,10 @@ a:hover{
 .hex {
     flex-basis: 22%;
     text-align: center;
+}
+
+.hex:hover{
+    transform: scale(0.98);
 }
 
 p{
@@ -190,15 +194,15 @@ section{
     margin-top: 10px;
     border-radius: 15px;
     margin-bottom: 10px;
+    box-shadow: 4px 2px 10.6px 10px #6c757e;
 
 }
 
-.card1{
+.modal{
     background: #34383b00;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(59, 59, 59, 0.932);
-    max-width: 500px;
     margin: auto;
     text-align: center;
 }
@@ -257,7 +261,7 @@ section{
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.664);
     display: none;
     justify-content: center;
     align-items: center;
@@ -268,7 +272,7 @@ section{
 }
 
 .modal-content{
-    background-color: rgba(0, 0, 0, 0.925);
+    background-color: rgba(0, 0, 0, 0.815);
     padding: 30px;
     border-radius: 20px;
     max-width: 700px;
@@ -302,6 +306,10 @@ section{
     background: rgb(146, 16, 16);
     color: aliceblue;
     transform: scale(0.99);
+}
+
+footer{
+    margin-bottom: 10px;
 }
 
 @media (max-width:780px){
