--- a/SiteIA/style.css
+++ b/SiteIA/style.css
@@ -35,6 +35,7 @@ h1{
     font-family: "Notable", sans-serif;
     font-weight: 300;
     font-style: normal;
+    margin-bottom: 20px;
 }
 
 h2{
@@ -102,13 +103,13 @@ a:hover{
 }
 
 #albuns img {
+    display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100%; 
+    width: 90%; 
     max-width: 350px; 
     height: auto; 
     clip-path: polygon(50% 0%, 80% 10%, 100% 35%, 100% 70%, 80% 90%, 50% 100%, 20% 90%, 0% 70%, 0% 35%, 20% 10%);
-    display: block;
 }
 
 .hex-grid {
@@ -284,16 +285,15 @@ section{
     transform: scale(0.99);
 }
 
-
-
 .modal:target{
     display: flex;
 }
 
 .modal-content{
-    background-color: rgba(0, 0, 0, 0.815);
+    background-color: rgba(58, 58, 58, 0.815);
     padding: 30px;
     border-radius: 20px;
+    margin-top: 450px;
     max-width: 700px;
     text-align: center;
     box-shadow: 3px 4px 10px rgb(99, 99, 99);
@@ -331,21 +331,48 @@ section{
     transform: scale(0.99);
 }
 
-footer{
-    margin-bottom: 10px;
+.grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 15px;
 }
 
-@media(max-width:1400px){
+.grid img{
+    width: 85%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 20px;
+    border: #888421 3px solid;
+    box-shadow: 3px 4px 10px rgba(255, 255, 255, 0.616);
+    transition: transform 0.8s ease-out, box-shadow 0.8s ease-in;
+    margin: auto;
+    margin-bottom: 25px;
+}
+
+.grid img:hover{
+    transform: translateY(-5px);
+}
+
+.galeria{
+    padding: 20px;
+}
+
+footer{
+    margin-bottom: 15px;
+    margin-top: 30px;
+}
+
+@media(max-width:1829px){
     #compositores .container{
         display: grid; /* Transforma o layout em uma grade (grid) */
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1300px)); /*a função repeat(auto-fit) permite que as imagens se ajustem automaticamente, e o minmax(200, 1fr) permite que o mínimo permitido seja de 200px, e o máximo seja de 1fr(espaço disponível na tela)*/
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1829px)); /*a função repeat(auto-fit) permite que as imagens se ajustem automaticamente, e o minmax(200, 1fr) permite que o mínimo permitido seja de 200px, e o máximo seja de 1fr(espaço disponível na tela)*/
         gap: 20px; /*Inclui um espaçamento entre as imagens*/
         margin-top: 1.3em;
         text-align: center;
     }
 }
 
-@media (max-width:750px){
+@media (max-width:800px){
     header{
         padding: 20px;
     }
@@ -389,16 +416,15 @@ footer{
     }
 
     .modal-content{
-        background-color: rgba(0, 0, 0, 0.815);
+        background-color: rgba(58, 58, 58, 0.815);
         padding: 30px;
         border-radius: 20px;
         max-width: 400px;
         text-align: center;
         box-shadow: 3px 4px 10px rgb(99, 99, 99);
         color: black;
-        font-size: 0.6em;
-        margin-top: 300px;
-        margin-bottom: 150px;
+        font-size: 0.67em;
+        margin-top: 1050px;
         overflow-y: auto;
     }
 
@@ -443,8 +469,33 @@ footer{
     #compositores .item{
         font-size: 0.7em;
     }
-}
 
+    .grid{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); 
+        gap: 15px;
+    }
+
+    .grid img{
+        width: 85%;
+        height: auto;
+        object-fit: cover;
+        border-radius: 20px;
+        border: #888421 3px solid;
+        box-shadow: 3px 4px 10px rgba(255, 255, 255, 0.616);
+        transition: transform 0.8s ease-out, box-shadow 0.8s ease-in;
+        margin: auto;
+        margin-bottom: 25px;
+    }
+
+    .grid img:hover{
+        transform: translateY(-5px);
+    }
+
+    .galeria{
+        padding: 20px;
+    }
+}
 
 @media (max-width: 500px){
     h1{
@@ -453,7 +504,7 @@ footer{
     }
 
     .modal-content{
-        background-color: rgba(75, 75, 75, 0.973);
+        background-color: rgba(58, 58, 58, 0.815);
         padding: 30px;
         border-radius: 20px;
         max-width: 400px;
@@ -462,7 +513,58 @@ footer{
         color: black;
         font-size: 0.6em;
         margin-top: 920px;
-        margin-bottom: 150px;
-        overflow-y: scroll;
+        overflow-y: auto;
+    }
+}
+
+@media(max-width: 450px){
+    .grid{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr); 
+        gap: 15px;
+    }
+
+    .grid img{
+        width: 85%;
+        height: auto;
+        object-fit: cover;
+        border-radius: 20px;
+        border: #888421 3px solid;
+        box-shadow: 3px 4px 10px rgba(255, 255, 255, 0.616);
+        transition: transform 0.8s ease-out, box-shadow 0.8s ease-in;
+        margin: auto;
+        margin-bottom: 25px;
+    }
+
+    .grid img:hover{
+        transform: translateY(-5px);
+    }
+
+    .galeria{
+        padding: 20px;
+    }
+}
+
+@media (max-width: 300px){
+    h1{
+        text-align: center;
+        font-size: 1.1em;
+    }
+
+    h2{
+        font-size: 0.7em;
+    }
+
+    .modal-content{
+        background-color: rgba(58, 58, 58, 0.815);
+        padding: 30px;
+        border-radius: 20px;
+        max-width: 400px;
+        text-align: center;
+        box-shadow: 3px 4px 10px rgb(99, 99, 99);
+        color: black;
+        font-size: 0.6em;
+        margin-top: 1400px;
+        overflow-y: auto;
     }
 }
