--- a/SiteIA/style.css
+++ b/SiteIA/style.css
@@ -80,6 +80,18 @@ header .container{
     font-weight: bold;
 }
 
+.logo a{
+    text-decoration: none;
+    color: whitesmoke;
+    transition: ease-in-out 0.2s;
+}
+
+.logo:hover{
+    transition: ease-in-out 0.2s;
+    transform: scale(104%);
+    cursor: pointer;
+}
+
 a:hover{
     color: #e7e113;
 }
@@ -157,6 +169,26 @@ p{
     padding-right: 30px;
 }
 
+.banner2{
+    background: url(img/banner2.jpg) no-repeat center/cover;
+    height: 600px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 5em;
+    font-family: "Holtwood One SC", serif;
+    font-weight: 350;
+    font-style: normal;
+    text-shadow: 6.5px 4px 5px rgb(0, 0, 0);
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.banner2 p{
+    text-indent: 0em;
+}
+
 section{
     scroll-margin-top: 100px;
 }
@@ -222,6 +254,14 @@ section{
 #compositores .container h1{
     grid-column: 1 / -1;
     margin-bottom: 20px;
+}
+
+.contato-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.6em;
 }
 
 .modal{
@@ -363,6 +403,19 @@ footer{
     margin-top: 30px;
 }
 
+@media (max-width:1300px){
+    .banner2{
+        background: url(img/banner2.jpg) no-repeat center/cover;
+        height: 470px;
+        font-size: 2.4em;
+        font-weight: 300;
+        font-style: normal;
+        text-shadow: 6.5px 4px 5px rgb(0, 0, 0);
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+}
+
 @media (max-width:850px){
     header{
         padding: 20px;
@@ -434,14 +487,12 @@ footer{
     }
 
     .banner{
-        background: url(img/Banner.jpg) no-repeat center/cover;
         height: 470px;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
         font-size: 1.2em;
-        text-shadow: 6.5px 4px 5px rgb(168, 174, 54);
         padding-left: 10px;
         padding-right: 10px;
     }
